--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-Flask>=3.0.0
-Flask-SQLAlchemy>=3.1.0
-Flask-Migrate>=3.0.0
+Flask==3.1.0
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.37
+alembic==1.14.0
