Mejoras estéticas y funcionales: Añadidos pop-ups de notificación, corrección de errores en autenticación y ajustes responsivos.

--- a/.env
+++ b/.env
@@ -1,5 +1,22 @@
+# Archivo de configuración de entorno (.env)
+# Este archivo define variables de entorno necesarias para la aplicación Flask.
+
+# Especifica el archivo principal de la aplicación Flask.
+# Flask utiliza esta variable para saber qué archivo ejecutar.
 FLASK_APP=run.py
+
+# Define la ruta de Python para que Flask pueda encontrar los módulos de la aplicación.
+# $(pwd) se refiere al directorio actual.
 PYTHONPATH=$(pwd)
+
+# Establece el entorno de Flask como "development".
+# Esto habilita características como el modo de depuración y recarga automática de cambios.
 FLASK_ENV=development
+
+# Clave secreta utilizada para cifrar datos sensibles, como cookies de sesión.
+# En un entorno de producción, esta clave debe ser segura y no estar hardcodeada.
 SECRET_KEY=dev_esit
+
+# URI de conexión a la base de datos.
+# En este caso, se utiliza SQLite y la base de datos se almacenará en un archivo llamado "todo_list.db".
 SQLALCHEMY_DATABASE_URI=sqlite:///todo_list.db
